Fix acronym stuff

--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -1,39 +1,149 @@
-@article{liAutonomousGISNextgeneration2023,
+@misc{liAutonomousGISNextgeneration2023,
   title = {Autonomous {{GIS}}: The next-Generation {{AI-powered GIS}}},
+  shorttitle = {Autonomous {{GIS}}},
   author = {Li, Zhenlong and Ning, Huan},
   year = {2023},
   month = may,
-  abstract = {Large Language Models (LLMs), such as ChatGPT, demonstrate a strong understanding of human natural language and have been explored and applied in various fields, including reasoning, creative writing, code generation, translation, and information retrieval. By adopting LLM as the reasoning core, we introduce Autonomous GIS as an AI-powered geographic information system (GIS) that leverages the LLM's general abilities in natural language understanding, reasoning, and coding for addressing spatial problems with automatic spatial data collection, analysis, and visualization. We envision that autonomous GIS will need to achieve five autonomous goals: self-generating, selforganizing, self-verifying, self-executing, and self-growing. We developed a prototype system called LLMGeo using the GPT-4 API in a Python environment, demonstrating what an autonomous GIS looks like and how it delivers expected results without human intervention using three case studies. For all case studies, LLM-Geo was able to return accurate results, including aggregated numbers, graphs, and maps, significantly reducing manual operation time. Although still in its infancy and lacking several important modules such as logging and code testing, LLM-Geo demonstrates a potential path toward the nextgeneration AI-powered GIS. We advocate for the GIScience community to dedicate more effort to the research and development of autonomous GIS, making spatial analysis easier, faster, and more accessible to a broader audience.},
-  langid = {english},
-  keywords = {GIS,LLM},
-  file = {C:\Users\oskar\Zotero\storage\FVBR8CAD\Li and Ning - Autonomous GIS the next-generation AI-powered GIS.pdf}
+  number = {arXiv:2305.06453},
+  eprint = {2305.06453},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2305.06453},
+  urldate = {2023-10-04},
+  abstract = {Large Language Models (LLMs), such as ChatGPT, demonstrate a strong understanding of human natural language and have been explored and applied in various fields, including reasoning, creative writing, code generation, translation, and information retrieval. By adopting LLM as the reasoning core, we introduce Autonomous GIS as an AI-powered geographic information system (GIS) that leverages the LLM's general abilities in natural language understanding, reasoning, and coding for addressing spatial problems with automatic spatial data collection, analysis, and visualization. We envision that autonomous GIS will need to achieve five autonomous goals: self-generating, self-organizing, self-verifying, self-executing, and self-growing. We developed a prototype system called LLM-Geo using the GPT-4 API in a Python environment, demonstrating what an autonomous GIS looks like and how it delivers expected results without human intervention using three case studies. For all case studies, LLM-Geo was able to return accurate results, including aggregated numbers, graphs, and maps, significantly reducing manual operation time. Although still in its infancy and lacking several important modules such as logging and code testing, LLM-Geo demonstrates a potential path toward the next-generation AI-powered GIS. We advocate for the GIScience community to dedicate more effort to the research and development of autonomous GIS, making spatial analysis easier, faster, and more accessible to a broader audience.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Human-Computer Interaction},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\F2SMY58Q\\Li and Ning - 2023 - Autonomous GIS the next-generation AI-powered GIS.pdf;C\:\\Users\\oskar\\Zotero\\storage\\JRUTEB6E\\2305.html}
 }
 
-@article{quAssociationHighsensitivityCardiac2024,
-  title = {Association of High-Sensitivity Cardiac Troponin {{T}} with All-Cause and Cardiovascular Mortality in Older Adults with Low Lean Mass: {{A}} 14.6-Year Longitudinal Study},
-  shorttitle = {Association of High-Sensitivity Cardiac Troponin {{T}} with All-Cause and Cardiovascular Mortality in Older Adults with Low Lean Mass},
-  author = {Qu, Q. and Shi, Y. and Guo, Q. and Yue, X. and Chen, L. and Sun, J. and Chen, Z. and Shi, J. and Cheang, I. and Zhu, X. and Yao, W. and Gao, R. and Li, X. and Zhou, Y. and Zhang, H. and Liao, S.},
-  year = {2024},
-  journal = {Archives of Gerontology and Geriatrics},
-  volume = {116},
-  issn = {0167-4943},
-  doi = {10.1016/j.archger.2023.105140},
-  abstract = {Background: Current evidence on the association between high-sensitivity cardiac troponin T (hs-cTnT) levels and mortality in elderly sarcopenic patients is limited. This study aimed to investigate the association of serum hs-cTnT concentrations with all-cause and cardiovascular mortality in older adults with low lean mass (LLM) and without baseline cardiovascular disease. Methods: This prospective cohort study included 369 older adults (representing 3.2 million people) from the National Health and Nutrition Examination Survey 1999\textendash 2004. Individuals were linked to national death records until 31 December 2019. The weighted Kaplan-Meier analysis, Cox proportional hazards models, restricted cubic spline models, stratified analysis, interaction analysis, and sensitivity analysis were performed to examine the association between hs-cTnT levels and mortality in older adults with LLM. Results: During 4697 person-years of follow-up (median duration, 14.6 years), 228 (65.6\%) deaths were documented, including 56 (15.8\%) deaths from cardiovascular disease. Individuals with a hs-cTnT level of {$\geq$}14 ng/L had 2.1- and 4.4-fold higher risks of all-cause and cardiovascular mortality, respectively. Compared with the lowest quartile, the fourth quartile of hs-cTnT levels was significantly associated with 3.1- and 6.4-fold higher risks of all-cause and cardiovascular mortality, respectively. Each one standard deviation increase in natural log-transformed hs-cTnT levels significantly and linearly increased the risks of all-cause and cardiovascular mortality by 39\% and 61\%, respectively. Stratified and sensitivity analyses confirmed the robustness of the association. Conclusions: In this nationally representative cohort of US older adults with LLM, higher serum hs-cTnT concentrations were significantly associated with increased risks of all-cause and cardiovascular mortality. \textcopyright{} 2023},
-  langid = {english},
-  keywords = {All-cause mortality,Cardiovascular mortality,High-sensitivity cardiac troponin T,Low lean mass,Sarcopenia},
-  file = {C:\Users\oskar\Zotero\storage\X6YP6XP2\display.html}
-}
-
-@article{zhengDynamicPromptbasedVirtual2023,
-  title = {Dynamic Prompt-Based Virtual Assistant Framework for {{BIM}} Information Search},
-  author = {Zheng, J. and Fischer, M.},
+@misc{maiOpportunitiesChallengesFoundation2023,
+  title = {On the {{Opportunities}} and {{Challenges}} of {{Foundation Models}} for {{Geospatial Artificial Intelligence}}},
+  author = {Mai, Gengchen and Huang, Weiming and Sun, Jin and Song, Suhang and Mishra, Deepak and Liu, Ninghao and Gao, Song and Liu, Tianming and Cong, Gao and Hu, Yingjie and Cundy, Chris and Li, Ziyuan and Zhu, Rui and Lao, Ni},
   year = {2023},
+  month = apr,
+  number = {arXiv:2304.06798},
+  eprint = {2304.06798},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  urldate = {2023-10-05},
+  abstract = {Large pre-trained models, also known as foundation models (FMs), are trained in a task-agnostic manner on large-scale data and can be adapted to a wide range of downstream tasks by fine-tuning, few-shot, or even zero-shot learning. Despite their successes in language and vision tasks, we have yet seen an attempt to develop foundation models for geospatial artificial intelligence (GeoAI). In this work, we explore the promises and challenges of developing multimodal foundation models for GeoAI. We first investigate the potential of many existing FMs by testing their performances on seven tasks across multiple geospatial subdomains including Geospatial Semantics, Health Geography, Urban Geography, and Remote Sensing. Our results indicate that on several geospatial tasks that only involve text modality such as toponym recognition, location description recognition, and US state-level/county-level dementia time series forecasting, these task-agnostic LLMs can outperform task-specific fully-supervised models in a zero-shot or few-shot learning setting. However, on other geospatial tasks, especially tasks that involve multiple data modalities (e.g., POI-based urban function classification, street view image-based urban noise intensity classification, and remote sensing image scene classification), existing foundation models still underperform task-specific models. Based on these observations, we propose that one of the major challenges of developing a FM for GeoAI is to address the multimodality nature of geospatial tasks. After discussing the distinct challenges of each geospatial data modality, we suggest the possibility of a multimodal foundation model which can reason over various types of geospatial data through geospatial alignments. We conclude this paper by discussing the unique risks and challenges to develop such a model for GeoAI.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Computer Vision and Pattern Recognition,I.2.0,I.2.10,I.2.4,I.2.7,I.5.1},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\KR8QU4W7\\Mai et al. - 2023 - On the Opportunities and Challenges of Foundation .pdf;C\:\\Users\\oskar\\Zotero\\storage\\LIMFU3ZQ\\Mai et al. - 2023 - On the Opportunities and Challenges of Foundation .pdf;C\:\\Users\\oskar\\Zotero\\storage\\F5ULIY86\\2304.html}
+}
+
+@misc{mialonAugmentedLanguageModels2023,
+  title = {Augmented {{Language Models}}: A {{Survey}}},
+  shorttitle = {Augmented {{Language Models}}},
+  author = {Mialon, Gr{\'e}goire and Dess{\`i}, Roberto and Lomeli, Maria and Nalmpantis, Christoforos and Pasunuru, Ram and Raileanu, Roberta and Rozi{\`e}re, Baptiste and Schick, Timo and {Dwivedi-Yu}, Jane and Celikyilmaz, Asli and Grave, Edouard and LeCun, Yann and Scialom, Thomas},
+  year = {2023},
+  month = feb,
+  number = {arXiv:2302.07842},
+  eprint = {2302.07842},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  urldate = {2023-10-05},
+  abstract = {This survey reviews works in which language models (LMs) are augmented with reasoning skills and the ability to use tools. The former is defined as decomposing a potentially complex task into simpler subtasks while the latter consists in calling external modules such as a code interpreter. LMs can leverage these augmentations separately or in combination via heuristics, or learn to do so from demonstrations. While adhering to a standard missing tokens prediction objective, such augmented LMs can use various, possibly non-parametric external modules to expand their context processing ability, thus departing from the pure language modeling paradigm. We therefore refer to them as Augmented Language Models (ALMs). The missing token objective allows ALMs to learn to reason, use tools, and even act, while still performing standard natural language tasks and even outperforming most regular LMs on several benchmarks. In this work, after reviewing current advance in ALMs, we conclude that this new research direction has the potential to address common limitations of traditional LMs such as interpretability, consistency, and scalability issues.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Computation and Language},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\KXD9RICF\\Mialon et al. - 2023 - Augmented Language Models a Survey.pdf;C\:\\Users\\oskar\\Zotero\\storage\\AESC743L\\2302.html}
+}
+
+@misc{richardAutoGPTHeartOpensource2023,
+  title = {{{AutoGPT}}: The Heart of the Open-Source Agent Ecosystem},
+  shorttitle = {{{AutoGPT}}},
+  author = {Richard, Toran Bruce},
+  year = {2023},
+  month = oct,
+  urldate = {2023-10-05},
+  abstract = {An experimental open-source attempt to make GPT-4 fully autonomous.},
+  copyright = {MIT},
+  howpublished = {AutoGPT},
+  keywords = {ai,artificial-intelligence,autonomous-agents,gpt-4,openai,python}
+}
+
+@misc{robertsGPT4GEOHowLanguage2023,
+  title = {{{GPT4GEO}}: {{How}} a {{Language Model Sees}} the {{World}}'s {{Geography}}},
+  shorttitle = {{{GPT4GEO}}},
+  author = {Roberts, Jonathan and L{\"u}ddecke, Timo and Das, Sowmen and Han, Kai and Albanie, Samuel},
+  year = {2023},
+  month = may,
+  number = {arXiv:2306.00020},
+  eprint = {2306.00020},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2306.00020},
+  urldate = {2023-10-05},
+  abstract = {Large language models (LLMs) have shown remarkable capabilities across a broad range of tasks involving question answering and the generation of coherent text and code. Comprehensively understanding the strengths and weaknesses of LLMs is beneficial for safety, downstream applications and improving performance. In this work, we investigate the degree to which GPT-4 has acquired factual geographic knowledge and is capable of using this knowledge for interpretative reasoning, which is especially important for applications that involve geographic data, such as geospatial analysis, supply chain management, and disaster response. To this end, we design and conduct a series of diverse experiments, starting from factual tasks such as location, distance and elevation estimation to more complex questions such as generating country outlines and travel networks, route finding under constraints and supply chain analysis. We provide a broad characterisation of what GPT-4 (without plugins or Internet access) knows about the world, highlighting both potentially surprising capabilities but also limitations.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\7DRKDHXI\\Roberts et al. - 2023 - GPT4GEO How a Language Model Sees the World's Geo.pdf;C\:\\Users\\oskar\\Zotero\\storage\\BHCR5VUS\\2306.html}
+}
+
+@misc{xuRetrievalMeetsLong2023,
+  title = {Retrieval Meets {{Long Context Large Language Models}}},
+  author = {Xu, Peng and Ping, Wei and Wu, Xianchao and McAfee, Lawrence and Zhu, Chen and Liu, Zihan and Subramanian, Sandeep and Bakhturina, Evelina and Shoeybi, Mohammad and Catanzaro, Bryan},
+  year = {2023},
+  month = oct,
+  number = {arXiv:2310.03025},
+  eprint = {2310.03025},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2310.03025},
+  urldate = {2023-10-05},
+  abstract = {Extending the context window of large language models (LLMs) is getting popular recently, while the solution of augmenting LLMs with retrieval has existed for years. The natural questions are: i) Retrieval-augmentation versus long context window, which one is better for downstream tasks? ii) Can both methods be combined to get the best of both worlds? In this work, we answer these questions by studying both solutions using two state-of-the-art pretrained LLMs, i.e., a proprietary 43B GPT and LLaMA2-70B. Perhaps surprisingly, we find that LLM with 4K context window using simple retrieval-augmentation at generation can achieve comparable performance to finetuned LLM with 16K context window via positional interpolation on long context tasks, while taking much less computation. More importantly, we demonstrate that retrieval can significantly improve the performance of LLMs regardless of their extended context window sizes. Our best model, retrieval-augmented LLaMA2-70B with 32K context window, outperforms GPT-3.5-turbo-16k and Davinci003 in terms of average score on seven long context tasks including question answering and query-based summarization. It also outperforms its non-retrieval LLaMA2-70B-32k baseline by a margin, while being much faster at generation. Our study provides general insights on the choice of retrieval-augmentation versus long context extension of LLM for practitioners.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Information Retrieval,Computer Science - Machine Learning},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\JRUJKG3V\\Xu et al. - 2023 - Retrieval meets Long Context Large Language Models.pdf;C\:\\Users\\oskar\\Zotero\\storage\\D6E8ZDVE\\2310.html}
+}
+
+@misc{yaoReActSynergizingReasoning2023,
+  title = {{{ReAct}}: {{Synergizing Reasoning}} and {{Acting}} in {{Language Models}}},
+  shorttitle = {{{ReAct}}},
+  author = {Yao, Shunyu and Zhao, Jeffrey and Yu, Dian and Du, Nan and Shafran, Izhak and Narasimhan, Karthik and Cao, Yuan},
+  year = {2023},
+  month = mar,
+  number = {arXiv:2210.03629},
+  eprint = {2210.03629},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  urldate = {2023-10-05},
+  abstract = {While large language models (LLMs) have demonstrated impressive capabilities across tasks in language understanding and interactive decision making, their abilities for reasoning (e.g. chain-of-thought prompting) and acting (e.g. action plan generation) have primarily been studied as separate topics. In this paper, we explore the use of LLMs to generate both reasoning traces and task-specific actions in an interleaved manner, allowing for greater synergy between the two: reasoning traces help the model induce, track, and update action plans as well as handle exceptions, while actions allow it to interface with external sources, such as knowledge bases or environments, to gather additional information. We apply our approach, named ReAct, to a diverse set of language and decision making tasks and demonstrate its effectiveness over state-of-the-art baselines, as well as improved human interpretability and trustworthiness over methods without reasoning or acting components. Concretely, on question answering (HotpotQA) and fact verification (Fever), ReAct overcomes issues of hallucination and error propagation prevalent in chain-of-thought reasoning by interacting with a simple Wikipedia API, and generates human-like task-solving trajectories that are more interpretable than baselines without reasoning traces. On two interactive decision making benchmarks (ALFWorld and WebShop), ReAct outperforms imitation and reinforcement learning methods by an absolute success rate of 34\% and 10\% respectively, while being prompted with only one or two in-context examples. Project site with code: https://react-lm.github.io},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\GYD7CH87\\Yao et al. - 2023 - ReAct Synergizing Reasoning and Acting in Languag.pdf;C\:\\Users\\oskar\\Zotero\\storage\\DNDVTT3Y\\2210.html}
+}
+
+@misc{zhangGeoGPTUnderstandingProcessing2023,
+  title = {{{GeoGPT}}: {{Understanding}} and {{Processing Geospatial Tasks}} through {{An Autonomous GPT}}},
+  shorttitle = {{{GeoGPT}}},
+  author = {Zhang, Yifan and Wei, Cheng and Wu, Shangyou and He, Zhengting and Yu, Wenhao},
+  year = {2023},
+  month = jul,
+  number = {arXiv:2307.07930},
+  eprint = {2307.07930},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2307.07930},
+  urldate = {2023-10-04},
+  abstract = {Decision-makers in GIS need to combine a series of spatial algorithms and operations to solve geospatial tasks. For example, in the task of facility siting, the Buffer tool is usually first used to locate areas close or away from some specific entities; then, the Intersect or Erase tool is used to select candidate areas satisfied multiple requirements. Though professionals can easily understand and solve these geospatial tasks by sequentially utilizing relevant tools, it is difficult for non-professionals to handle these problems. Recently, Generative Pre-trained Transformer (e.g., ChatGPT) presents strong performance in semantic understanding and reasoning. Especially, AutoGPT can further extend the capabilities of large language models (LLMs) by automatically reasoning and calling externally defined tools. Inspired by these studies, we attempt to lower the threshold of non-professional users to solve geospatial tasks by integrating the semantic understanding ability inherent in LLMs with mature tools within the GIS community. Specifically, we develop a new framework called GeoGPT that can conduct geospatial data collection, processing, and analysis in an autonomous manner with the instruction of only natural language. In other words, GeoGPT is used to understand the demands of non-professional users merely based on input natural language descriptions, and then think, plan, and execute defined GIS tools to output final effective results. Several cases including geospatial data crawling, spatial query, facility siting, and mapping validate the effectiveness of our framework. Though limited cases are presented in this paper, GeoGPT can be further extended to various tasks by equipping with more GIS tools, and we think the paradigm of "foundational plus professional" implied in GeoGPT provides an effective way to develop next-generation GIS in this era of large foundation models.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\F6ZE4DD9\\Zhang et al. - 2023 - GeoGPT Understanding and Processing Geospatial Ta.pdf;C\:\\Users\\oskar\\Zotero\\storage\\GYMENGQZ\\2307.html}
+}
+
+@article{zhengDynamicPromptbasedVirtual2023b,
+  title = {Dynamic Prompt-Based Virtual Assistant Framework for {{BIM}} Information Search},
+  author = {Zheng, Junwen and Fischer, Martin},
+  year = {2023},
+  month = nov,
   journal = {Automation in Construction},
   volume = {155},
+  pages = {105067},
   issn = {0926-5805},
   doi = {10.1016/j.autcon.2023.105067},
-  abstract = {Efficient information search from building information models (BIMs) requires deep BIM knowledge or extensive engineering efforts for building natural language (NL)-based interfaces. To address this challenge, this paper introduces a dynamic prompt-based virtual assistant framework dubbed ``BIMS-GPT'' that integrates generative pre-trained transformer (GPT) technologies, supporting NL-based BIM search. To understand users' NL queries, extract relevant information from BIM databases, and deliver NL responses along with 3D visualizations, a dynamic prompt-based process was developed. In a case study, BIMS-GPT's functionality is demonstrated through a virtual assistant prototype for a hospital building. When evaluated with a BIM query dataset, the approach achieves accuracy rates of 99.5\% for classifying NL queries with incorporating 2\% of the data in prompts. This paper contributes to the advancement of effective and versatile virtual assistants for BIMs in the construction industry as it significantly enhances BIM accessibility while reducing the engineering and training data prerequisites for processing NL queries. \textcopyright{} 2023},
-  langid = {english},
+  urldate = {2023-10-04},
+  abstract = {Efficient information search from building information models (BIMs) requires deep BIM knowledge or extensive engineering efforts for building natural language (NL)-based interfaces. To address this challenge, this paper introduces a dynamic prompt-based virtual assistant framework dubbed ``BIMS-GPT'' that integrates generative pre-trained transformer (GPT) technologies, supporting NL-based BIM search. To understand users' NL queries, extract relevant information from BIM databases, and deliver NL responses along with 3D visualizations, a dynamic prompt-based process was developed. In a case study, BIMS-GPT's functionality is demonstrated through a virtual assistant prototype for a hospital building. When evaluated with a BIM query dataset, the approach achieves accuracy rates of 99.5\% for classifying NL queries with incorporating 2\% of the data in prompts. This paper contributes to the advancement of effective and versatile virtual assistants for BIMs in the construction industry as it significantly enhances BIM accessibility while reducing the engineering and training data prerequisites for processing NL queries.},
   keywords = {Artificial intelligence,BIMS-GPT,Building information modeling,Generative pre-trained transformer,Information retrieval,Information search,Large language model,Natural language processing,Prompt engineering,Virtual assistant},
-  file = {C\:\\Users\\oskar\\Zotero\\storage\\6ZZGH65V\\Zheng and Fischer - 2023 - Dynamic prompt-based virtual assistant framework f.pdf;C\:\\Users\\oskar\\Zotero\\storage\\FDJBK8QM\\S0926580523003278.html;C\:\\Users\\oskar\\Zotero\\storage\\NE7D6R85\\display.html}
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\75F3SL4G\\Zheng and Fischer - 2023 - Dynamic prompt-based virtual assistant framework f.pdf;C\:\\Users\\oskar\\Zotero\\storage\\KVF8FKTL\\S0926580523003278.html;C\:\\Users\\oskar\\Zotero\\storage\\NE7D6R85\\display.html}
 }
