--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -1,24 +1,24 @@
 \newglossaryentry{apig}{
     name={API},
     description={
-        An Application Programming Interface (API) is a particular set of functions and procedures that a software program can utilize to access features or data of another software program}
+            An Application Programming Interface (API) is a particular set of functions and procedures that a software program can utilize to access features or data of another software program}
 }
 \newglossaryentry{api}{
-    type=\acronymtype, 
-    name={API}, 
-    description={Application Programming Interface}, 
+    type=\acronymtype,
+    name={API},
+    description={Application Programming Interface},
     first={Application Programming Interface (API)\glsadd{apig}}
 }
 
 \newglossaryentry{bertg}{
     name={BERT},
     description={
-        Bidirectional Encoder Representations from Transformers (BERT) is a language model developed by Google AI Language that is trained on a large amount of plain text from Wikipedia and BookCorpus}
+            Bidirectional Encoder Representations from Transformers (BERT) is a language model developed by Google AI Language that is trained on a large amount of plain text from Wikipedia and BookCorpus}
 }
 \newglossaryentry{bert}{
-    type=\acronymtype, 
-    name={BERT}, 
-    description={Bidirectional Encoder Representations from Transformers}, 
+    type=\acronymtype,
+    name={BERT},
+    description={Bidirectional Encoder Representations from Transformers},
     first={Bidirectional Encoder Representations from Transformers\glsadd{bertg}}
 }
 
@@ -27,6 +27,8 @@
 \newacronym[description=Generative Adversarial Network]{acr:gan}{GAN}{Generative Adversarial Network}
 
 \newacronym{acr:crf}{CRF}{Conditional Random Fields}
-\newacronym{acr:doi}{DOI}{Digital Object Identifier} 
+\newacronym{acr:doi}{DOI}{Digital Object Identifier}
 \newacronym{acr:nb}{NB}{Na\"{\i}ve Bayes}
 \newacronym{acr:svm}{SVM}{Support Vector Machine}
+\newacronym{acr:ym}{YM}{yo mama}
+\newacronym{acr:cm}{CM}{come on}
