Add some theory on geospatial standards

--- a/tex/appendices/appendices.tex
+++ b/tex/appendices/appendices.tex
@@ -2,8 +2,10 @@
 
 \chapter*{Appendices}
 \label{cha:appendices}
+
 \addcontentsline{toc}{chapter}{Appendices}
 
+\begin{comment}
 \chapter{Proof of the First Zonklar Equation}
 \label{app:zonklar}
 
@@ -13,3 +15,4 @@ Appendix one text goes here.
 \label{app:slr}
 
 Appendix two text goes here.
+\end{comment}
