--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -1,34 +1,45 @@
-\newglossaryentry{apig}{
-    name={API},
-    description={
-            An Application Programming Interface (API) is a particular set of functions and procedures that a software program can utilize to access features or data of another software program}
-}
-\newglossaryentry{api}{
-    type=\acronymtype,
-    name={API},
-    description={Application Programming Interface},
-    first={Application Programming Interface (API)\glsadd{apig}}
-}
+% \newglossaryentry{apig}{
+%     name={API},
+%     description={
+%             An Application Programming Interface (API) is a particular set of functions and procedures that a software program can utilize to access features or data of another software program}
+% }
+% \newglossaryentry{api}{
+%     type=\acronymtype,
+%     name={API},
+%     description={Application Programming Interface},
+%     first={Application Programming Interface (API)\glsadd{apig}}
+% }
 
-\newglossaryentry{bertg}{
-    name={BERT},
-    description={
-            Bidirectional Encoder Representations from Transformers (BERT) is a language model developed by Google AI Language that is trained on a large amount of plain text from Wikipedia and BookCorpus}
-}
-\newglossaryentry{bert}{
-    type=\acronymtype,
-    name={BERT},
-    description={Bidirectional Encoder Representations from Transformers},
-    first={Bidirectional Encoder Representations from Transformers\glsadd{bertg}}
-}
+% \newglossaryentry{bertg}{
+%     name={BERT},
+%     description={
+%             Bidirectional Encoder Representations from Transformers (BERT) is a language model developed by Google AI Language that is trained on a large amount of plain text from Wikipedia and BookCorpus}
+% }
+% \newglossaryentry{bert}{
+%     type=\acronymtype,
+%     name={BERT},
+%     description={Bidirectional Encoder Representations from Transformers},
+%     first={Bidirectional Encoder Representations from Transformers\glsadd{bertg}}
+% }
 
-\newacronym[description=Computational Creativity]{acr:cc}{CC}{Computational Creativity}
-\newacronym[description=Computational Linguistic Creativity]{acr:clc}{CLC}{Computational Linguistic Creativity}
-\newacronym[description=Generative Adversarial Network]{acr:gan}{GAN}{Generative Adversarial Network}
+\newacronym{acr:llm}{LLM}{Large Language Model}
+\newacronym{acr:nlp}{NLP}{Natural Language Processing}
+\newacronym{acr:aws}{AWS}{Amazon Web Services}
+\newacronym{acr:gpt}{GPT}{Generative Pre-trained Transformer}
+\newacronym{acr:bert}{BERT}{Bidirectional Encoder Representation from Transformers}
+\newacronym{acr:gis}{GIS}{Geographic information system}
+\newacronym{acr:ogc}{OGC}{Open Geospatial Consortium}
+\newacronym{acr:stac}{STAC}{SpatioTemporal Asset Catalog}
+\newacronym{acr:sosi}{SOSI}{Samordnet Opplegg for Stedfestet Informasjon}
+\newacronym{acr:iso}{ISO}{International Organization for Standardization}
+\newacronym{acr:tc}{TC}{Technical committee}
+\newacronym{acr:api}{API}{Application Programming Interface}
+\newacronym{acr:http}{HTTP}{Hypertext Transfer Protocol}
+\newacronym{acr:json}{JSON}{JavaScript Object Notation}
+\newacronym{acr:html}{HTML}{HyperText Markup Language}
+\newacronym{acr:xml}{XML}{Extensible Markup Language}
+\newacronym{acr:gml}{GML}{Geography Markup Language}
+\newacronym{acr:wms}{WMS}{Web Map Service}
+\newacronym{acr:wfs}{WFS}{Web Feature Service}
+\newacronym{acr:gdal}{GDAL}{Geospatial Data Abstraction Library}
 
-\newacronym{acr:crf}{CRF}{Conditional Random Fields}
-\newacronym{acr:doi}{DOI}{Digital Object Identifier}
-\newacronym{acr:nb}{NB}{Na\"{\i}ve Bayes}
-\newacronym{acr:svm}{SVM}{Support Vector Machine}
-\newacronym{acr:ym}{YM}{yo mama}
-\newacronym{acr:cm}{CM}{come on}
