--- a/tex/frontmatter/preface.tex
+++ b/tex/frontmatter/preface.tex
@@ -1,9 +1,10 @@
 \section*{Preface}
 
-The Preface includes the facts: what type of project, where it is conducted, 
-who supervised, and any acknowledgements you wish to give. 
+\begin{comment}
+The Preface includes the facts: what type of project, where it is conducted,
+who supervised, and any acknowledgements you wish to give.
 
-This Master's Thesis template was created by Bj\"orn Gamb\"ack and is based on a template that he created for the 2016 ``Experts in Team'' course on 
+This Master's Thesis template was created by Bj\"orn Gamb\"ack and is based on a template that he created for the 2016 ``Experts in Team'' course on
 Computational Creativity (TDT4853) at the Norwegian University of Science and Technology (NTNU),
 which in turn was heavily based on the 2014 AI Master's Thesis template created by Anders Kofod-Petersen ---
 with some of the explaining text stemming from Anders' original template.
@@ -16,6 +17,7 @@ in particular not if you have changed the theme somewhat over time.
 The Preface of the Master's Thesis might also be a good place to introduce your Specialisation Project, in case you plan
 on reusing some texts from it (since the Specialisation Project is not a published and easily accessible work, and might
 not be known to your audience, neither your text in itself nor even the general concept as such).
+\end{comment}
 
 \vfill
 
